# BeatQuestModder

./: .gitignore  .gitmodules  BeatQuestModder.sln  CMakeLists.txt  CMakeSettings.json
.github/: FUNDING.yml
0Harmony/: 0Harmony.csproj  ExceptionBlock.cs  Patch.cs  PatchProcessor.cs  Priority.cs
0Harmony/Internal/: PatchFunctions.cs  PatchSorter.cs
0Harmony/Tools/: AccessTools.cs  Extensions.cs  FileLog.cs
BeatQuestModder/: BeatQuestModder.vcxproj  BeatQuestModder.vcxproj.filters
BeatQuestModder/src/: BeatQuestModder.cpp
CMake/: Environment.cmake  FindDotnet.cmake
Harmony/: Harmony.vcxproj.filters
Harmony/include/: Harmony.h  icalls.h
Host/: CMakeLists.txt
Host/BeatQuestModder/: CMakeLists.txt
Host/BeatQuestModder/include/: BeatQuestModder.h  CapstoneHandle.h  buffer.h
Host/BeatQuestModder/include/bqm/capstone/: Handle.h
Host/BeatQuestModder/src/: BeatQuestModder.cpp  CapstoneHandle.cpp
Host/BeatQuestModder/src/bqm/capstone/: Handle.cpp
Host/Il2CppInvoker/: CMakeLists.txt  CustomNameService.cs  Il2CppInvoker.csproj  Il2CppRunner.cs  Program.cs  SemiUniqueStableTokenGenerator.cs
Il2CppInvoker/: Program.cs
tools/il2cppdump/: .gitignore
